# logistream

./: .env.example  .gitignore  .vercelignore  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  vercel.json
api/: app.py
docs/: venv_setup.md
scripts/: download_datasets.py  generate_data.py  init_db.sql  setup_venv.ps1  setup_venv.sh  train_model.py
services/agent_ia/: Dockerfile  main.py  requirements.txt
services/enrichissement/: Dockerfile  main.py
services/ingestion_kaggle/: main.py
services/replay_lade/: Dockerfile  main.py
services/ui/: app.py  requirements.txt
